estrutura e reponsividade da home finalizadas

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Vinicius Costa</title>
+    <title>Vinícius Costa</title>
 </head>
 <body>
     <header>
@@ -17,10 +17,22 @@
     </header>
 
     <section class="container">
-        <div class="left"></div>
+        <div class="left">
+            <div class="info">
+                <div class="profession">Desenvolvedor Frontend & Backend</div>
+                <div class="name">Prazer, Vinícius Costa</div>
+                <div class="buttons">
+                    <a href="">Mais sobre mim</a>
+                    <a href="" class="light">Contrate-me</a>
+                </div>
+            </div>
+        </div>
         <div class="right"></div>
     </section>
 
-    <footer></footer>
+    <footer>
+        <div>Feito com &hearts; por <a href="https://github.com/ThiagoMaklin">Thiago Maklin</a>.</div>
+        <div>Copyright &copy; 2024 All rights reserved</div> 
+    </footer>
 </body>
 </html>
